--- a/src/objects/Displayer/templates/index.html
+++ b/src/objects/Displayer/templates/index.html
@@ -5,44 +5,99 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="text" id="dynamic-question">{{ string }}</div>
-  <div class="text" id="dynamic-answer">{{ string }}</div>
+  <div id="dynamic-content"></div>
   
   <script>
     const eventSource = new EventSource("/stream");
     eventSource.onmessage = (event) => {
-      const question = event.data.split("~*-*~")[0];
-      const answer = event.data.split("~*-*~")[1];
-      
-      console.log(question)
-      console.log(answer)
+      const text = event.data;
+      console.log(text)
+      const dynamicContent = document.getElementById('dynamic-content');
+      dynamicContent.innerHTML = '';
 
-      document.getElementById('dynamic-question').textContent = question;
-      document.getElementById('dynamic-answer').textContent = answer;
+      if (text.includes('|')) {
+        const [tableTitle, tableContent] = text.includes('~') ? text.split('~') : ['', text];
+        const words = tableContent.split('|');
+
+        if (tableTitle) {
+          const title = document.createElement('h3');
+          title.classList.add('title');
+          title.innerText = tableTitle;
+          dynamicContent.appendChild(title);
+        }
+
+        const table = document.createElement('table');
+        table.classList.add('table');
+
+        for (let i = 0; i < words.length; i += 2) {
+          const row = document.createElement('tr');
+          const cell1 = document.createElement('td');
+          cell1.innerHTML = words[i].trim().split('/n').join('<br>');
+          row.appendChild(cell1);
+
+          if (words[i + 1]) {
+            const cell2 = document.createElement('td');
+            cell2.innerHTML = words[i + 1].trim().split('/n').join('<br>');
+            row.appendChild(cell2);
+          }
+
+          table.appendChild(row);
+        }
+
+        dynamicContent.appendChild(table);
+      } else {
+        const paragraphs = text.split('/n').filter(p => p.trim() !== '').map(paragraph => {
+          const p = document.createElement('p');
+          p.innerText = paragraph;
+          return p;
+        });
+        paragraphs.forEach(paragraph => dynamicContent.appendChild(paragraph));
+      }
     };
   </script>
 </body>
 </html>
 
-
-
 <style>
-
 body {
     background-color: black;
     width: 100vw;
-    height:95vh;
+    height: 95vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-
     transition: all 0.75s ease;
-}
-.text {
-    color: white;
-    font-size: 50px;
+    margin: 0;
 }
 
+p {
+    color: white;
+    font-size: 40px;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+}
+
+.table {
+    color: white;
+    font-size: 40px;
+    border-collapse: collapse;
+    border: 2px solid white;
+    width: 100%;
+    height: 100%;
+    table-layout: fixed;
+}
+
+.table td {
+    padding: 10px;
+    border: 1px solid white;
+    width: 25%;
+}
+
+.title {
+    color: white;
+    text-align: center;
+    margin-bottom: 10px;
+}
 </style>
