--- a/src/objects/Displayer/templates/index.html
+++ b/src/objects/Displayer/templates/index.html
@@ -84,6 +84,7 @@
       img.src = content;
       img.style.maxWidth = '100%';
       img.style.maxHeight = '100%';
+      img.style.objectFit = 'contain'; // Ajout de cette ligne
       container.appendChild(img);
     }
   </script>
@@ -131,5 +132,14 @@ p {
     color: white;
     text-align: center;
     margin-bottom: 10px;
+}
+
+#dynamic-content {
+  width: 100%;
+  height: 100vh; /* Ajout de cette ligne */
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 </style>
