--- a/src/objects/Displayer/templates/index.html
+++ b/src/objects/Displayer/templates/index.html
@@ -52,7 +52,7 @@
       const words = tableContent.split('|');
 
       if (tableTitle) {
-        const title = document.createElement('h3');
+        const title = document.createElement('h2');
         title.classList.add('title');
         title.innerText = tableTitle;
         container.appendChild(title);
@@ -84,7 +84,7 @@
       img.src = content;
       img.style.maxWidth = '100%';
       img.style.maxHeight = '100%';
-      img.style.objectFit = 'contain'; // Ajout de cette ligne
+      img.style.objectFit = 'contain';
       container.appendChild(img);
     }
   </script>
@@ -136,7 +136,7 @@ p {
 
 #dynamic-content {
   width: 100%;
-  height: 100vh; /* Ajout de cette ligne */
+  height: 100vh;
   display:flex;
   flex-direction: column;
   justify-content: center;
