--- a/src/objects/Displayer/templates/index.html
+++ b/src/objects/Displayer/templates/index.html
@@ -106,7 +106,15 @@ body {
 
 p {
     color: white;
-    font-size: 40px;
+    font-size: 35px;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+}
+
+h2 {
+    color: white;
+    font-size: 30px;
     text-align: center;
     width: 100%;
     margin: 0;
@@ -114,11 +122,12 @@ p {
 
 .table {
     color: white;
-    font-size: 40px;
+    text-align: center;
+    font-size: 30px;
     border-collapse: collapse;
     border: 2px solid white;
     width: 100%;
-    height: 100%;
+    height: 85%;
     table-layout: fixed;
 }
 
