--- a/src/objects/displayer/templates/index.html
+++ b/src/objects/displayer/templates/index.html
@@ -125,6 +125,7 @@
 
 <style>
 body {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: black;
     width: 100vw;
     height: 95vh;
@@ -138,7 +139,7 @@ body {
 
 p {
     color: white;
-    font-size: 35px;
+    font-size: 45px;
     text-align: center;
     width: 100%;
     margin: 0;
