first screen wip

--- a/src/objects/displayer/templates/index.html
+++ b/src/objects/displayer/templates/index.html
@@ -203,9 +203,9 @@
 <style>
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: black;
+    background-color: white;
     width: 100vw;
-    height: 95vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -216,7 +216,7 @@ body {
 
 .table {
     color: white;
-    text-align: center;c
+    text-align: center;
     font-size: 30px;
     border-collapse: collapse;
     border: 2px solid white;
@@ -245,7 +245,11 @@ body {
 /* Text */
 /* ----------------------------------------------------------------------- */
 .text-big{
-  font-size: 25px
+  font-size: 3rem;
+}
+
+.text-bold{
+  font-weight: bold;
 }
 
 .text-red{
@@ -258,9 +262,19 @@ body {
   color: white;
 }
 
+.text-centered{
+  text-align: center;
+}
+
 
 /* Image */
 /* ----------------------------------------------------------------------- */
+.image-big{
+  width: 75vw;
+}
+.image-medium{
+  width: 50vw;
+}
 .image-small{
   width: 20vw;
 }
