--- a/src/objects/displayer/templates/index.html
+++ b/src/objects/displayer/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Chaîne dynamique</title>
+  <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}"/> 
 </head>
 <body>
   <div id="dynamic-content"></div>
@@ -201,82 +202,5 @@
 </html>
 
 <style>
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    transition: all 0.75s ease;
-    margin: 0;
-}
-
-.table {
-    color: white;
-    text-align: center;
-    font-size: 30px;
-    border-collapse: collapse;
-    border: 2px solid white;
-    width: 100%;
-    height: 85%;
-    table-layout: fixed;
-}
-
-.table td {
-    padding: 10px;
-    border: 1px solid white;
-    width: 25%;
-}
-
-
-#dynamic-content {
-  width: 100%;
-  height: 100vh;
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-
-/* Text */
-/* ----------------------------------------------------------------------- */
-.text-big{
-  font-size: 3rem;
-}
-
-.text-bold{
-  font-weight: bold;
-}
-
-.text-red{
-  color: red
-}
-.text-black{
-  color: black;
-}
-.text-white{
-  color: white;
-}
-
-.text-centered{
-  text-align: center;
-}
-
-
-/* Image */
-/* ----------------------------------------------------------------------- */
-.image-big{
-  width: 75vw;
-}
-.image-medium{
-  width: 50vw;
-}
-.image-small{
-  width: 20vw;
-}
 
 </style>
