--- a/src/objects/displayer/static/styles/style.css
+++ b/src/objects/displayer/static/styles/style.css
@@ -1,10 +1,11 @@
 @font-face {
     font-family: Montserrat;
-    src: url('Montserrat-VariableFont_wght.ttf');
+    /* src: url("{{url_for('static', filename='fonts/Montserrat-VariableFont_wght.ttf')}}"); */
+    src: url('../fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
   }
   
   body {
-      font-family: Montserrat, Arial, Helvetica, sans-serif;
+      font-family: Montserrat;
       background-color: white;
       width: 100vw;
       height: 100vh;
@@ -56,8 +57,14 @@
     font-size: 1rem;
   }
   
+
+
   .text-bold{
     font-weight: bold;
+  }
+  
+  .text-bold-700{
+    font-weight: 700;
   }
   
   .text-red{
