--- a/src/objects/displayer/static/styles/style.css
+++ b/src/objects/displayer/static/styles/style.css
@@ -4,100 +4,122 @@
     src: url('../fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
   }
   
-  body {
-      font-family: Montserrat;
-      background-color: white;
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-      transition: all 0.75s ease;
-      margin: 0;
-  }
-  
-  .table {
-      color: white;
-      text-align: center;
-      font-size: 30px;
-      border-collapse: collapse;
-      border: 2px solid white;
-      width: 100%;
-      height: 85%;
-      table-layout: fixed;
-  }
-  
-  .table td {
-      padding: 10px;
-      border: 1px solid white;
-      width: 25%;
-  }
-  
-  
-  #dynamic-content {
-    width: 100%;
+:root{
+  --black: #2E2E2E;
+  --white: #FDF9F6;
+  --blue: #5890E4;
+  --red: #E02D2D;
+}
+
+
+body {
+    font-family: Montserrat;
+    background-color: var(--white);
+    width: 100vw;
     height: 100vh;
-    display:flex;
-    flex-direction: column;
+    display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  
-  /* Text */
-  /* ----------------------------------------------------------------------- */
-  .text-big{
-    font-size: 3rem;
-  }
-  .text-medium{
-    font-size: 2rem;
-  }
-  .text-small{
-    font-size: 1rem;
-  }
-  
+    overflow: hidden;
+    transition: all 0.75s ease;
+    margin: 0;
+}
 
+/* Table */
 
-  .text-bold{
-    font-weight: bold;
-  }
-  
-  .text-bold-700{
-    font-weight: 700;
-  }
-  
-  .text-red{
-    color: #E02D2D
-  }
-  .text-black{
-    color: #2E2E2E;
-  }
-  .text-white{
-    color: #FDF9F6;
-  }
-  .text-blue{
-    color: #5890E4;
-  }
-  
-  .text-centered{
+.table {
+    color: var(--black);
     text-align: center;
-  }
+    width: 80%;
+    height: 85%;
+    margin: 0 auto;
+    table-layout: fixed;
+    border-spacing: 10px;
+}
+
+.table td {
+    padding: 20px 15px;
+
+    width: 25%;
+
+    text-align: left;
+    font-weight: 600;
+
+    font-size: 2.25rem;
+
+    border-radius: 10px;
+    border: 3px solid var(--red);
+    box-shadow: -4px 4px 0px 0px var(--red);
+    background: var(--white);
+}
+
+.question-name{
+  color: var(--red)
+}
+
+
+#dynamic-content {
+  width: 100%;
+  height: 100vh;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
   
-  .text-uppercase{
-    text-transform: uppercase;
-  }
   
+/* Text */
+/* ----------------------------------------------------------------------- */
+.text-big{
+  font-size: 3rem;
+}
+.text-medium{
+  font-size: 2rem;
+}
+.text-small{
+  font-size: 1rem;
+}
   
-  /* Image */
-  /* ----------------------------------------------------------------------- */
-  .image-big{
-    width: 75vw;
-  }
-  .image-medium{
-    width: 50vw;
-  }
-  .image-small{
-    width: 20vw;
-  }
+
+
+.text-bold{
+  font-weight: bold;
+}
   
+.text-bold-700{
+  font-weight: 700;
+}
+  
+.text-red{
+  color: var(--red)
+}
+.text-black{
+  color: var(--black);
+}
+.text-white{
+  color: var(--white);
+}
+.text-blue{
+  color: var(--blue);
+}
+
+.text-centered{
+  text-align: center;
+}
+
+.text-uppercase{
+  text-transform: uppercase;
+}
+
+
+/* Image */
+/* ----------------------------------------------------------------------- */
+.image-big{
+  width: 75vw;
+}
+.image-medium{
+  width: 50vw;
+}
+.image-small{
+  width: 20vw;
+}
