--- a/src/objects/displayer/static/styles/style.css
+++ b/src/objects/displayer/static/styles/style.css
@@ -51,8 +51,16 @@ body {
   justify-content: center;
   align-items: center;
 }
-  
-  
+
+#dynamic-content > div{
+  margin: 3vh 0;
+}
+
+p {
+  margin: 0;
+}
+
+
 /* Text */
 /* ----------------------------------------------------------------------- */
 
@@ -109,8 +117,14 @@ body {
 .text-boxed-red{
   aspect-ratio: 1 / 1;
 
-  padding: 30px;
-  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 40px;
+
+  width: 10vw;
+  height: 10vw;
 
   border-radius: 10px;
   border: 3px solid var(--red) !important;
@@ -159,11 +173,11 @@ body {
   height: 85%;
   margin: 0 auto;
   table-layout: fixed;
-  border-spacing: 10px;
+  border-spacing: 20px;
 }
 
 .table td {
-  padding: 20px 15px;
+  padding: 30px 15px;
 
   width: 25%;
 
