--- a/src/objects/displayer/static/styles/style.css
+++ b/src/objects/displayer/static/styles/style.css
@@ -133,6 +133,7 @@ p {
 }
 
 
+
 /* Alignement */
 /* ---------- */
 .text-centered{
@@ -201,5 +202,49 @@ p {
 }
 
 .blue-cell .question-name{
+  color: var(--blue)
+}
+
+
+/* Score */
+/* ----------------------------------------------------------------------- */
+
+.score-parent{
+  width: 100vw;
+  /* padding: 20vw; */
+}
+
+.score-div{
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+.score-boxed-red{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 20px 30px;
+
+  border-radius: 10px;
+  border: 3px solid var(--red) !important;
+  box-shadow: -4px 4px 0px 0px var(--red) !important;
+  color: var(--red)
+}
+
+.score-boxed-blue{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 20px 30px;
+
+  border-radius: 10px;
+  border: 3px solid var(--blue) !important;
+  box-shadow: -4px 4px 0px 0px var(--blue) !important;
   color: var(--blue)
 }
